...
            modifier = Modifier.padding(horizontal = 16.dp).fillMaxWidth()) {
              Image(
                  painter = rememberAsyncImagePainter(model = account?.profileImageUrl ?: ""),
                  contentDescription = "Profile",
                  contentScale = ContentScale.Crop,
                  modifier =
                      Modifier.size(54.dp).clip(CircleShape).testTag("ProfilePicture").shadow(4.dp))
              Spacer(modifier = Modifier.width(10.dp))
              Text(
                  text =
                      if (expanded.value) {
                        stringResource(id = R.string.WorkoutsTitle, account?.firstName ?: "")
                      } else {
...
                  style =
                      MaterialTheme.typography.titleSmall.copy(
                          fontSize = 20.sp, fontFamily = OpenSans, fontWeight = FontWeight.Bold),
                  color = Color.White,
                  maxLines = 1,
                  overflow = TextOverflow.Ellipsis,
                  modifier = Modifier.testTag("WelcomeText").fillMaxWidth(0.9f))
              Spacer(modifier = Modifier.weight(1f))
              Image(
                  painter = painterResource(id = R.drawable.group),
                  contentDescription = "Group",
                  modifier =
                      Modifier.size(30.dp).testTag("FriendsButton").clickable {
                        navigationActions.navigateTo(Screen.FRIENDS)
                      })
            }
      }
}

...

  val animatedHeight by
      animateDpAsState(
          targetValue = if (expanded.value) 500.dp else 200.dp,
          animationSpec = tween(durationMillis = 300))

  Column(modifier = Modifier.fillMaxWidth().padding(horizontal = 24.dp).testTag("WorkoutSection")) {
    if (expanded.value) {
      TabsMainScreen(selectedTab.value, onTabSelected = { tab -> selectedTab.value = tab })
    } else {
      Spacer(modifier = Modifier.height(16.dp))
      Text(
          text = stringResource(id = R.string.WorkoutsTitle),
...
          items(workout) { workoutItem ->
            val workoutViewModel =
                when (workoutItem) {
                  is BodyWeightWorkout -> bodyWeightViewModel
                  else -> yogaViewModel
                }
            WorkoutCard(workoutItem, workoutViewModel, profile, navigationActions)
            Spacer(modifier = Modifier.height(15.dp))
          }
        }
      } else {
        Text(
            modifier = Modifier.fillMaxWidth().padding(12.dp).testTag("NoWorkoutMessage"),
            textAlign = TextAlign.Center,
            text = stringResource(id = R.string.noWorkouts),
            style = MaterialTheme.typography.bodyMedium.copy(fontSize = 18.sp))

        if (expanded.value) {
          ImageComposable(
              R.drawable.no_item,
              "No workout logo",
              Modifier.size(200.dp).align(Alignment.CenterHorizontally).testTag("NoWorkoutImage"))
        }
      }

      Spacer(modifier = Modifier.weight(1f))
    }
    Image(
...
        colorFilter = ColorFilter.tint(DoubleArrow),
        modifier =
            Modifier.rotate(if (expanded.value) 180f else 0f)
                .fillMaxWidth()
                .align(Alignment.CenterHorizontally)
                .height(40.dp)
                .testTag("DoubleArrow")
                .clickable { expanded.value = !expanded.value })
  }
}

/**
 * Displays the tabs for selecting different workout types.
...
 * @param selectedTab The currently selected tab index.
 * @param onTabSelected Callback function to handle tab selection.
 */
@Composable
fun TabsMainScreen(selectedTab: WorkoutTab, onTabSelected: (WorkoutTab) -> Unit) {
  val tabTitles = listOf(R.string.TitleTabBody, R.string.TitleTabYoga, R.string.TitleTabRunning)
  val tabTags = listOf("BodyTab", "YogaTab", "RunningTab")

  Column(modifier = Modifier.fillMaxWidth().testTag("TabSection")) {
    Row(
        horizontalArrangement = Arrangement.SpaceEvenly,
        modifier = Modifier.fillMaxWidth().padding(vertical = 8.dp)) {
          WorkoutTab.entries.forEachIndexed { index, tab ->
            TabItemMainScreen(
                title = tabTitles[index],
...
@Composable
fun QuickWorkoutSection(
    navigationActions: NavigationActions,
    bodyWeightViewModel: WorkoutViewModel<BodyWeightWorkout>,
    yogaViewModel: WorkoutViewModel<YogaWorkout>
) {
  Column(modifier = Modifier.fillMaxWidth().testTag("QuickSection")) {
    Text(
        text = stringResource(id = R.string.QuickTitle),
        style =
            MaterialTheme.typography.titleSmall.copy(
                fontSize = 24.sp, fontFamily = OpenSans, fontWeight = FontWeight.SemiBold),
        modifier = Modifier.padding(vertical = 10.dp, horizontal = 20.dp))

    Row(
        modifier = Modifier.fillMaxWidth().background(Color.Transparent),
        horizontalArrangement = Arrangement.SpaceEvenly) {
          QuickWorkoutButton(
              R.drawable.quick_bodyweight,
              onClick = {
                bodyWeightViewModel.selectWorkout(
                    bodyWeightViewModel.copyOf(BodyWeightWorkout.QUICK_BODY_WEIGHT_WORKOUT))
                navigationActions.navigateTo(Screen.BODY_WEIGHT_OVERVIEW)
              })
...
fun AchievementsSection(navigationActions: NavigationActions) {
  val shape =
      RoundedCornerShape(topStart = 25.dp, topEnd = 10.dp, bottomStart = 10.dp, bottomEnd = 25.dp)
  Column(modifier = Modifier.fillMaxWidth()) {
    Text(
        stringResource(id = R.string.AchievementsTitle),
        modifier = Modifier.padding(horizontal = 20.dp, vertical = 6.dp).testTag("AchievementText"),
        style =
            MaterialTheme.typography.titleSmall.copy(
                fontSize = 24.sp, fontFamily = OpenSans, fontWeight = FontWeight.SemiBold))

    Row() {
      Text(
...
          modifier =
              Modifier.fillMaxWidth()
                  .padding(vertical = 16.dp, horizontal = 20.dp)
                  .shadow(4.dp, shape = shape)
                  .height(60.dp)
                  .background(AchievementButton, shape = shape)
                  .testTag("AchievementButton")
                  .clickable { navigationActions.navigateTo(Screen.ACHIEVEMENTS) },
          contentAlignment = Alignment.Center) {
            Row(verticalAlignment = Alignment.CenterVertically) {
              Text(
                  stringResource(id = R.string.ViewAllTitle),
                  modifier = Modifier.padding(horizontal = 12.dp),
...
