...
      modifier =
          Modifier.height(40.dp)
              .width(250.dp)
              .padding(horizontal = 16.dp)
              .shadow(elevation = 8.dp, shape = RoundedCornerShape(30.dp), clip = false)
              .background(color = White, shape = RoundedCornerShape(30.dp))
              .testTag("BottomBar"),
      contentAlignment = Alignment.Center,
  ) {
    Box(
        modifier =
            modifier
                .width(200.dp)
...
