...
import androidx.compose.material.icons.outlined.Person
import androidx.compose.material.icons.outlined.PlayArrow
import androidx.compose.ui.graphics.vector.ImageVector
import androidx.navigation.NavHostController

object Route {
  const val MAIN = "Main"
  const val AUTH = "Auth"
  const val VIDEO_LIBRARY = "Video Library"
  const val VIDEO = "Video"
  const val ACHIEVEMENTS = "Achievements"
  const val PREFERENCES = "Preferences"
  const val SETTINGS = "Settings"
...
